# VeriFile

./: README.md  pyproject.toml
src/verifile/: cli.py  detector.py  reporter.py
verifile/: hasher.py  main.py  reporter.py
