[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verifile"
version = "0.1.0"
description = "File Identification and Verification Tool"
authors = [{ name="KEVIN JOSE" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-magic; platform_system != 'Windows'",
]

[project.scripts]
verifile = "verifile.cli:main"
